added catalina_opts variable; updated dockerfile to accept a version number