@@ -2,6 +2,9 @@
 ADMIN_USER=${ADMIN_USER:-admin}
 ADMIN_PASS=${ADMIN_PASS:-tomcat}
 MAX_UPLOAD_SIZE=${MAX_UPLOAD_SIZE:-52428800}
+CATALINA_OPTS=${CATALINA_OPTS:-"-Xms128m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m"}
+
+export CATALINA_OPTS="${CATALINA_OPTS}"
 
 cat << EOF > /opt/tomcat/conf/tomcat-users.xml
 <?xml version='1.0' encoding='utf-8'?>
